--- a/rotor_tm_config/config/attach_mechanism/cable/3_robots_triangular_payload_1m.yaml
+++ b/rotor_tm_config/config/attach_mechanism/cable/3_robots_triangular_payload_1m.yaml
@@ -12,3 +12,7 @@ rho:
 
 # Define the cable length
 cable_length: [1.0,1.0,1.0]
+
+# Define the types of robots attach to the payload
+robot_list: ["snapdragonfly","snapdragonfly","snapdragonfly"]
+
