--- a/rotor_tm_config/config/attach_mechanism/cable/3_robots_triangular_payload_1m_0-5m_different_cable_length.yaml
+++ b/rotor_tm_config/config/attach_mechanism/cable/3_robots_triangular_payload_1m_0-5m_different_cable_length.yaml
@@ -12,3 +12,6 @@ rho:
 
 # Define the cable length
 cable_length: [1.0,0.5,1.0]
+
+# Define the types of robots attach to the payload
+robot_list: ["snapdragonfly","snapdragonfly","snapdragonfly"]
