better control gains for race and hummingbird

--- a/rotor_tm_config/config/attach_mechanism/cable/3_robots_triangular_payload_1m_different_robots_dynamics.yaml
+++ b/rotor_tm_config/config/attach_mechanism/cable/3_robots_triangular_payload_1m_different_robots_dynamics.yaml
@@ -14,4 +14,4 @@ rho:
 cable_length: [1.0,1.0,1.0]
 
 # Define the types of robots attach to the payload
-robot_list: ["snapdragonfly","hummingbird","snapdragonfly_bullnose_prop"]
+robot_list: ["snapdragonfly","race","hummingbird"]
