better yaw gains for rigid links triangular payload

--- a/rotor_tm_config/config/attach_mechanism/cable/3_robots_triangular_payload_1m_bullnose_dragonfly.yaml
+++ b/rotor_tm_config/config/attach_mechanism/cable/3_robots_triangular_payload_1m_bullnose_dragonfly.yaml
@@ -14,5 +14,5 @@ rho:
 cable_length: [1.0,1.0,1.0]
 
 # Define the types of robots attach to the payload
-robot_list: ["snapdragonfly","snapdragonfly","snapdragonfly"]
+robot_list: ["snapdragonfly_bullnose_prop","snapdragonfly_bullnose_prop","snapdragonfly_bullnose_prop"]
 
